<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:textAlignment="center"
    tools:context=".About_Library_Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:text="@string/st_title_history"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:videoId="okRPTioKZCE"
            app:autoPlay="true"
            app:showFullScreenButton="false" />
        <TextView
            android:id="@+id/text_history"
            android:lineSpacingExtra="8sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_text_history"
            android:gravity="bottom"
            android:textSize="20sp"
            android:layout_margin="16dp"
            android:textColor="@color/black"/>
        <TextView
            android:lineSpacingExtra="8sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/st_text_history_two"
            android:gravity="bottom"
            android:textSize="20sp"
            android:layout_margin="16dp"
            android:textColor="@color/black"/>
        <TextView
            android:lineSpacingExtra="8sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_text_history_three"
            android:gravity="bottom"
            android:textSize="20sp"
            android:layout_margin="16dp"
            android:textColor="@color/black"/>
    </LinearLayout>
</ScrollView>